[project]
name = "odoo-addons-oca-l10n-belgium"
version = "17.0.20240313.0"
dependencies = [
    "odoo-addon-companyweb_base>=17.0dev,<17.1dev",
    "odoo-addon-companyweb_payment_info>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
